Added default number of questions in math.html.

--- a/math.html
+++ b/math.html
@@ -12,7 +12,7 @@
 
   <div id="params" class="centxt">
     How many questions?
-    <input id="numq" class="cenblk">
+    <input id="numq" class="cenblk" value="5">
 
     Test type:
     <select id="test_type" class="cenblk">
