--- a/math.html
+++ b/math.html
@@ -4,6 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <title>Math</title>
   <link rel="stylesheet" href="style.css" type="text/css">
 </head>
