Checks for touchstart functionality before binding

--- a/math.html
+++ b/math.html
@@ -21,7 +21,7 @@
       <option value="position">Position</option>
     </select>
 
-    <span id="start_test" onclick="startTest()" class="cenblk button">Start Test</a>
+    <span id="start_test" class="cenblk button">Start Test</a>
   </div>
 
   <div id="testbed">
