--- a/math.html
+++ b/math.html
@@ -11,17 +11,17 @@
 
 <body>
 
-  <div id="params" class="centxt">
+  <div id="params">
     How many questions?
-    <input id="numq" class="cenblk" value="5">
+    <input id="numq" value="5">
 
     Test type:
-    <select id="test_type" class="cenblk">
+    <select id="test_type">
       <option value="math">Math</option>
       <option value="position">Position</option>
     </select>
 
-    <span id="start_test" class="cenblk button">Start Test</a>
+    <span id="start_test">Start Test</a>
   </div>
 
   <div id="testbed">
