--- a/math.html
+++ b/math.html
@@ -13,15 +13,15 @@
 
   <div id="params">
     How many questions?
-    <input id="numq" value="5">
+    <input id="numq" value="5" class="block">
 
     Test type:
-    <select id="test_type">
+    <select id="test_type" class="block">
       <option value="math">Math</option>
       <option value="position">Position</option>
     </select>
 
-    <span id="start_test">Start Test</a>
+    <span id="start_test" class="button block">Start Test</a>
   </div>
 
   <div id="testbed">
